created the about page for TechCon website

--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -21,8 +21,11 @@
     <main>
         <section>
             <p>This is a TechCon2024 project</p>
-            <video src="" controls=""></video>
-            <track></track>
+            <video src="" controls="">
+                <source src="promo.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+                <track kind="subtitles" src="subtitles-en.vtt" srclang="en" label="English"></track>
+            </video>
         </section>
     </main>
     <footer>
