--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -32,8 +32,6 @@
             <caption>Detailed Schedule of Events for TechCon 2024</caption>
         </table>
     </main>
-    <footer>
-        &copy; TechCon2024
-    </footer>
+    <footer>&copy; TechCon2024</footer>
 </body>
 </html>
