adding little style to schedule page

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <main>
-        <table>
+        <table border="3" cellpadding="5" cellspacing="0" style="margin-bottom: 10px; border-radius: 5%;">
             <tr>
                 <th scope="col">Time</th>
                 <th scope="col">Session</th>
@@ -29,10 +29,44 @@
                 <td>Opening Keynote</td>
                 <td>John Doe</td>
             </tr>
-            <caption>Detailed Schedule of Events for TechCon 2024</caption>
+            <tr>
+                <td>10:00 AM</td>
+                <td>AI Innovations</td>
+                <td>Jane Smith</td>
+            </tr>
+            <tr>
+                <td>11:00 AM</td>
+                <td>Blockchain Basics</td>
+                <td>Emily Johnson</td>
+            </tr>
+            <tr>
+                <td>12:00 PM</td>
+                <td>Lunch Break</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>1:00 PM</td>
+                <td>Cybersecurity Trends</td>
+                <td>Michael Brown</td>
+            </tr>
+            <tr>
+                <td>2:00 PM</td>
+                <td>Cloud Computing</td>
+                <td>Sarah Davis</td>
+            </tr>
+            <tr>
+                <td>3:00 PM</td>
+                <td>Data Science Applications</td>
+                <td>David Wilson</td>
+            </tr>
+            <tr>
+                <td>4:00 PM</td>
+                <td>Closing Remarks</td>
+                <td>Lisa Taylor</td>
+            </tr>
+            <caption style="font-weight: bold; color: salmon; text-align: center; margin-bottom: 10px;">Detailed Schedule of Events for TechCon 2024</caption>
         </table>
-        <footer> &copy; TechCon2024</footer>
     </main>
-    
+    <footer> &copy; TechCon2024</footer>
 </body>
 </html>
