--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -19,6 +19,9 @@
     </header>
     <main>
         <table border="3" cellpadding="5" cellspacing="0" style="margin-bottom: 10px; border-radius: 5%;">
+            <caption style="font-weight: bold; color: salmon; text-align: center; margin-bottom: 10px;">
+                Detailed Schedule of Events for TechCon 2024
+            </caption>
             <tr>
                 <th scope="col">Time</th>
                 <th scope="col">Session</th>
@@ -64,9 +67,9 @@
                 <td>Closing Remarks</td>
                 <td>Lisa Taylor</td>
             </tr>
-            <caption style="font-weight: bold; color: salmon; text-align: center; margin-bottom: 10px;">Detailed Schedule of Events for TechCon 2024</caption>
+            
         </table>
     </main>
-    <footer> &copy; TechCon2024</footer>
+    <footer> &copy; TechCon2024. All rights reserved. | Copyright TechCon</footer>
 </body>
 </html>
