--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -18,10 +18,10 @@
         </nav>
     </header>
     <main>
-        <table border="3" cellpadding="5" cellspacing="0" style="margin-bottom: 10px; border-radius: 5%;">
-            <caption style="font-weight: bold; color: salmon; text-align: center; margin-bottom: 10px;">
+        <table border="3" cellpadding="5" cellspacing="0">
+        <caption>
                 Detailed Schedule of Events for TechCon 2024
-            </caption>
+        </caption>
             <tr>
                 <th scope="col">Time</th>
                 <th scope="col">Session</th>
@@ -70,6 +70,8 @@
             
         </table>
     </main>
-    <footer> &copy; TechCon2024. All rights reserved. | Copyright TechCon</footer>
+    <footer>
+        Copyright © 2024 TechCon
+    </footer>
 </body>
 </html>
