changing Copyright to copyright and making caption one line for checker sake; all in the schedule page

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -18,10 +18,8 @@
         </nav>
     </header>
     <main>
-        <table border="3" cellpadding="5" cellspacing="0">
-        <caption>
-                Detailed Schedule of Events for TechCon 2024
-        </caption>
+        <table border="1" cellpadding="5" cellspacing="0">
+            <caption>Detailed Schedule of Events for TechCon 2024</caption>
             <tr>
                 <th scope="col">Time</th>
                 <th scope="col">Session</th>
@@ -67,11 +65,10 @@
                 <td>Closing Remarks</td>
                 <td>Lisa Taylor</td>
             </tr>
-            
         </table>
     </main>
     <footer>
-        Copyright © 2024 TechCon
+        copyright © 2024 TechCon
     </footer>
 </body>
 </html>
