--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <table border="1" cellpadding="5" cellspacing="0">
-            <caption>Detailed Schedule of Events for TechCon 2024</caption>
+            <table></table><caption>Detailed Schedule of Events for TechCon 2024</caption></table>
             <tr>
                 <th scope="col">Time</th>
                 <th scope="col">Session</th>
