--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <table border="1" cellpadding="5" cellspacing="0">
-            <table></table><caption>Detailed Schedule of Events for TechCon 2024</caption></table>
+            
             <tr>
                 <th scope="col">Time</th>
                 <th scope="col">Session</th>
@@ -65,6 +65,7 @@
                 <td>Closing Remarks</td>
                 <td>Lisa Taylor</td>
             </tr>
+            <caption>Detailed Schedule of Events for TechCon 2024</caption>
         </table>
     </main>
     <footer>
