--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -6,15 +6,17 @@
     <title>RegisterPage</title>
 </head>
 <body>
-    <h1>Register for TechCon 2024</h1>
-    <nav>
-            <ul>
-                <li><a href="about.html">About</a></li>
-                <li><a href="schedule.html">Schedule</a></li>
-                <li><a href="register.html">Register</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-    </nav>
+    <header>
+        <h1>Register for TechCon 2024</h1>
+        <nav>
+                <ul>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="schedule.html">Schedule</a></li>
+                    <li><a href="register.html">Register</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+        </nav>
+    </header>
     <main>
         <form action="">
             <label for="name">Registration Name</label>
