making h1 single line and adding a submit button for checker sake

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -7,9 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>
-            Contact Us
-        </h1>
+        <h1>Contact Us</h1>
         <nav>
             <ul>
                 <li><a href="about.html">About</a></li>
@@ -33,6 +31,7 @@
         <input type="email">
         <label for="message">Message</label>
         <textarea name="message" id="message">What can we do for you?</textarea>
+        <button type="submit">Send Message</button>
     </main>
     <footer>
         &copy; TechCon2024
