adding the form tag to inputs and labels

--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -25,13 +25,15 @@
         <div>
             <iframe src="https://maps.app.goo.gl/CxQCdXxuv94DBDx3A" frameborder="0">Our Location</iframe>
         </div>
-        <label for="Name">Enter your Name</label>
-        <input type="text">
-        <label for="email">Enter Your Email</label>
-        <input type="email">
-        <label for="message">Message</label>
-        <textarea name="message" id="message">What can we do for you?</textarea>
-        <button type="submit">Send Message</button>
+        <form action="">
+            <label for="Name">Enter your Name</label>
+            <input type="text">
+            <label for="email">Enter Your Email</label>
+            <input type="email">
+            <label for="message">Message</label>
+            <textarea name="message" id="message">What can we do for you?</textarea>
+            <button type="submit">Send Message</button>
+        </form>
     </main>
     <footer>
         &copy; TechCon2024
